analysis modified more simple and libs added to webapp

--- a/webapp/webapp/templates/home.html
+++ b/webapp/webapp/templates/home.html
@@ -64,6 +64,9 @@
         </div>
     </div>
 
+    {{tweets}}
+
+    <!-- Footer -->
     <footer class="bg-primary fixed-bottom text-white text-center">
         <p>
             Proyecto - Machine Learning
