--- a/webapp/webapp/templates/home.html
+++ b/webapp/webapp/templates/home.html
@@ -18,7 +18,7 @@
     <div class="row md-3">
         <div class="col-md-6 text-center">
             <h2>Similitud de Coseno</h2>
-            {%if tweets %}
+            {%if cos_tags %}
             <table class="table table-hover">
                 <thead class="thead-dark">
                     <tr>
@@ -40,7 +40,7 @@
         </div>
         <div class="col-md-6 text-center">
             <h2>Similitud de Jaccard</h2>
-            {%if tweets %}
+            {%if jac_tags %}
             <table class="table table-hover">
                 <thead class="thead-dark">
                     <tr>
@@ -49,10 +49,10 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {%for tweet in tweets%}
+                    {%for tweet in jac_tags%}
                     <tr>
                         <td>{{tweet}}</td>
-                        <td>sentimeinto...</td>
+                        <td>{{ jac_tags|get_item:tweet}}</td>
                     </tr>
                     {%endfor%}
                 </tbody>
