--- a/webapp/webapp/templates/home.html
+++ b/webapp/webapp/templates/home.html
@@ -36,6 +36,16 @@
 
                 </tbody>
             </table>
+            <div class="text-left">
+                <h4 class="font-weight-bold">Porcentajes</h4>
+                <p>
+                    <span class="font-weight-bold">Positivas:</span> {{cos_pos}}%
+                </p>
+                <p>
+                    <span class="font-weight-bold">Negativas:</span> {{cos_neg}}%
+                </p>
+            </div>
+
             {%endif%}
         </div>
         <div class="col-md-6 text-center">
@@ -57,6 +67,15 @@
                     {%endfor%}
                 </tbody>
             </table>
+            <div class="text-left">
+                <h4 class="font-weight-bold">Porcentajes</h4>
+                <p>
+                    <span class="font-weight-bold">Positivas:</span> {{jac_pos}}%
+                </p>
+                <p>
+                    <span class="font-weight-bold">Negativas:</span> {{jac_neg}}%
+                </p>
+            </div>
             {%endif%}
         </div>
     </div>
