--- a/webapp/webapp/templates/home.html
+++ b/webapp/webapp/templates/home.html
@@ -4,7 +4,7 @@
 
 <div class="container">
 
-    <h1 class="text-center mt-3">Tweet Analysis </h1>
+    <h1 class="text-center mt-3 display-4">Tweet Analysis </h1>
     <div class="col-md-4">
 
         <form action="/analysis" method="GET">
