--- a/webapp/webapp/templates/regresion.html
+++ b/webapp/webapp/templates/regresion.html
@@ -1,6 +1,6 @@
 {%extends "base.html"%}
 {%block content%}
 <div class="container">
-    <h1 class="text-center">Regresion</h1>
+    <h1 class="text-center display-4">Regresion</h1>
 </div>
 {%endblock%}
