--- a/webapp/webapp/templates/regresion.html
+++ b/webapp/webapp/templates/regresion.html
@@ -2,5 +2,28 @@
 {%block content%}
 <div class="container">
     <h1 class="text-center display-4">Regresion</h1>
+
+    <div class="row table-wrapper mt-3">
+        <div class="col-md">
+            {{html | safe}}
+        </div>
+    </div>
+    <div class="row mt-5 text-center">
+        <div class="col-md-4">
+            <h4 class="font-weight-bold">
+                Error:<span class="font-weight-normal"> {{meta.0}}%</span>
+            </h4>
+        </div>
+        <div class="col-md-4">
+            <h4 class="font-weight-bold">
+                Positivos:<span class="font-weight-normal"> {{meta.1}}%</span>
+            </h4>
+        </div>
+        <div class="col-md-4">
+            <h4 class="font-weight-bold">
+                Negativos:<span class="font-weight-normal"> {{meta.2}}%</span>
+            </h4>
+        </div>
+    </div>
 </div>
 {%endblock%}
