part 3 vader analysis

--- a/webapp/webapp/templates/base.html
+++ b/webapp/webapp/templates/base.html
@@ -35,6 +35,9 @@
                     <a class="nav-link" href="/regresion">Regresion</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/external">External</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                 </li>
             </ul>
@@ -49,7 +52,7 @@
     <!-- End Content -->
     <div class="clearfix"></div>
     <!-- Footer -->
-    <footer class="bg-primary text-white text-center">
+    <footer class="bg-primary text-white text-center mt-3">
         <p>
             Proyecto - Machine Learning
             Desarrollado por:
