--- a/webapp/webapp/templates/regresion.html
+++ b/webapp/webapp/templates/regresion.html
@@ -1,7 +1,7 @@
 {%extends "base.html"%}
 {%block content%}
 <div class="container">
-    <h1 class="text-center display-4">Regresion</h1>
+    <h1 class="text-center display-4">Regresion Logistica</h1>
 
     <div class="row table-wrapper mt-3">
         <div class="col-md">
