--- a/webapp/webapp/static/css/styles.css
+++ b/webapp/webapp/static/css/styles.css
@@ -32,4 +32,14 @@ main {
     overflow: scroll;
  }
 
+ .wrapper {
+    width: 100px;
+    height: 100px;
+ }
+
+ .collaborator {
+     width: 100%;
+     height: 250px;
+
+ }
  
