--- a/webapp/webapp/templates/about.html
+++ b/webapp/webapp/templates/about.html
@@ -1,73 +1,114 @@
-{%extends "base.html"%} {%block content%}
+{%extends "base.html"%}
+{%block content%}
+{% load static %}
+
 <div class="container">
-    <h1 class="text-center">About Page</h1>
-    <div class="wrapper row2">
-        <div id="container" class="clear">
-            <div id="about-us" class="clear">
-                <section id="about-intro" class="one_third first">
-                    <h2>Proposito de Proyecto</h2>
-                    <div class="panorama"><img class="imgholder" src="images/demo/290x170.gif" alt=""></div>
-                    <p>&quot;Analisis de sentiminetos Covid-19&quot;</p>
-                    <blockquote>
-                        <p><span>&ldquo;</span> La actual situacion de la emergencia sanitaria y nacio el proyecto de realizar un analsis de los sentimientos en el pais de Ecuador para mostrar los resultados y ver como la gente reacciona ante esta situacion
-                            que afecta a nuestro pais y al mundo".
-                        </p>
-                    </blockquote>
-                </section>
-                <section id="skillset" class="one_third">
-                    <h2>Herramientas utilizadas</h2>
-                    <p>Para la siguiente aplicacion se utilizaron las siguientes.</p>
-                    <h2>Detsacamos entre la principal herramienta Python ya que es de mucha utilidad para el analisis de datos y calculos matematicos</h2>
-                    <ul>
-                        <li>Python 3</li>
-                        <li>API Twitter.</li>
-                        <li>GitHub</li>
-                        <li>VADER (NLP)</li>
-                        <li>Emoji</li>
+    <h1 class="text-center mt-3 display-4">About Page</h1>
 
-                    </ul>
-                </section>
-                <section id="team" class="one_third">
-                    <h2>Participantes del Proyecto</h2>
-                    <ul class="clear">
-                        <li>
-                            <figure><img src="images/demo/img1.jpg" alt="">
-                                <figcaption>
-                                    <p class="team_name">Aguilar Siquigua Wilson Bryan</p>
-                                    <p class="team_title">Estudiante de septimo nivel de la Universidad Politecnica Salesiana</p>
-                                </figcaption>
-                            </figure>
-                        </li>
-                        <li>
-                            <figure><img src="images/demo/290x170.gif" alt="">
-                                <figcaption>
-                                    <p class="team_name">Pablo Gabriel Cacuango Pujota</p>
-                                    <p class="team_title">Estudiante de septimo nivel de la Universidad Politecnica Salesiana</p>
-                                </figcaption>
-                            </figure>
-                        </li>
-                        <li>
-                            <figure><img src="images/demo/team-member.gif" alt="">
-                                <figcaption>
-                                    <p class="team_name">Christian Mauricio Lasso Bethancut</p>
-                                    <p class="team_title">Estudiante de septimo nivel de la Universidad Politecnica Salesiana</p>
-                                </figcaption>
-                            </figure>
-                        </li>
-                        <li>
-                            <figure><img src="images/demo/team-member.gif" alt="">
-                                <figcaption>
-                                    <p class="team_name">Ricardo Patricio Romo Mejia</p>
-                                    <p class="team_title">Estudiante de septimo nivel de la Universidad Politecnica Salesiana</p>
-                                </figcaption>
-                            </figure>
-                        </li>
 
-                    </ul>
-                </section>
+
+    <section id="about-intro" class="one_third first">
+        <h2>Proposito de Proyecto</h2>
+        <div class="panorama"><img class="imgholder" src="images/demo/290x170.gif" alt=""></div>
+        <p>&quot;Analisis de sentiminetos Covid-19&quot;</p>
+        <blockquote>
+            <p><span>&ldquo;</span> La actual situacion de la emergencia sanitaria y nacio el proyecto de
+                realizar un analsis de los sentimientos en el pais de Ecuador para mostrar los resultados y
+                ver como la gente reacciona ante esta situacion
+                que afecta a nuestro pais y al mundo".
+            </p>
+        </blockquote>
+    </section>
+    <section id="skillset" class="one_third">
+        <h2>Herramientas utilizadas</h2>
+        <p>Para la siguiente aplicacion se utilizaron las siguientes.</p>
+        <p>Detsacamos entre la principal herramienta Python ya que es de mucha utilidad para el analisis de
+            datos y calculos matematicos</p>
+        <ul>
+            <li>Python 3</li>
+            <li>API Twitter.</li>
+            <li>GitHub</li>
+            <li>VADER (NLP)</li>
+            <li>Emoji</li>
+
+        </ul>
+    </section>
+    <section id="team" class="one_third">
+        <h2 class="text-center">Participantes del Proyecto</h2>
+        <div class="card-deck">
+            <div class="card">
+                <img class="card-img-top collaborator" src="{% static "images/will.jpg" %}" alt="Card image cap">
+
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Aguilar Siquigua Wilson Bryan
+                    </h5>
+                    <hr />
+                    <p class="card-text">
+                        Estudiante de septimo nivel de la Universidad Politecnica
+                        Salesiana
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">waguilars@est.ups.edu.ec</small>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top collaborator" src="{% static "images/gabo.jpeg" %}" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Pablo Gabriel Cacuango Pujota
+                    </h5>
+                    <hr />
+                    <p class="card-text">
+                        Estudiante de septimo nivel de la Universidad Politecnica
+                        Salesiana
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">pcacuangop@est.ups.edu</small>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" <img class="card-img-top collaborator" src="{% static "images/chris.jpeg" %}"
+                    alt="Card image cap">
+
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Christian Mauricio Lasso Betancourt
+                    </h5>
+                    <hr />
+                    <p class="card-text">
+                        Estudiante de septimo nivel de la Universidad Politecnica
+                        Salesiana
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">classob@est.ups.edu.ec</small>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top collaborator" src="{% static "images/ricky.jpeg" %}" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Ricardo Patricio Romo Mejia
+                    </h5>
+                    <hr />
+                    <p class="card-text">
+                        Estudiante de septimo nivel de la Universidad Politecnica
+                        Salesiana
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">rromom@est.ups.edu.ec</small>
+                    </p>
+                </div>
             </div>
 
+
+
         </div>
-    </div>
+    </section>
 </div>
+
+
 {%endblock%}
